--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -2813,6 +2813,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 623,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Ridge Regression classifier here\n",
+    "ridge = linear_model.RidgeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 624,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Score with Training data:\n",
+      "0.44565217391304346\n",
+      "Model Score with Testing data:\n",
+      "0.2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_testing(ridge, X, y, .35)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 620,
    "metadata": {
     "collapsed": true
@@ -2843,6 +2876,49 @@
    "source": [
     "model_testing(forest, X, y, .35)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# SVM?\n",
+    "from sklearn.svm import SVC\n",
+    "svc = SVC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 625,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'svc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-625-f369f94c1c81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_testing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msvc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m.35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'svc' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "model_testing(svc, X, y, .35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
