added words n stuff

--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -518,7 +518,7 @@
     }
    },
    "source": [
-    "# Here i made a dataframe of the occupations that did NOT report anythin for female weekly wages\n",
+    "# Here i made a dataframe of the occupations that did NOT report anything for female weekly wages\n",
     "\n",
     "Not really sure what good this will do, but maybe i could compare the occupational categories that did not report wages vs those that did?"
    ]
@@ -879,6 +879,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "To try to predict the occupation category, we're going to need to have categories that have more than a single instance in them. To solve this problem, we're going to combine a few of the different categories. Healthcare Support will be merged with Healthcare Professional, to become simply Healthcare. Agriculture, Construction, Maintenance and Groundskeeping will all be rolled in to Infrastructure Support. Engineering will be added to Science, and then Protective Service, Serviec, Arts, and Legal will all be put into Other."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -893,18 +904,20 @@
    "outputs": [],
    "source": [
     "# combine categories \n",
-    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'LEGAL', 'Occupation_Category_label'] = 'SOCIAL SERVICE'\n",
-    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'HEALTHCARE SUPPORT', 'Occupation_Category_label'] = 'HEALTHCARE PROFESSIONAL'\n",
+    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'HEALTHCARE SUPPORT', 'Occupation_Category_label'] = 'HEALTHCARE'\n",
+    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'HEALTHCARE PROFESSIONAL', 'Occupation_Category_label'] = 'HEALTHCARE'\n",
+    "\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'AGRICULTURAL', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'CONSTRUCTION', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'MAINTENANCE', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
-    "\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'GROUNDSKEEPING', 'Occupation_Category_label'] = 'INFRASTRUCTURE SUPPORT'\n",
+    "\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'ENGINEERING', 'Occupation_Category_label'] = 'SCIENCE'\n",
     "\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'PROTECTIVE SERVICE', 'Occupation_Category_label'] = 'OTHER'\n",
     "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'SERVICE', 'Occupation_Category_label'] = 'OTHER'\n",
-    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'ARTS', 'Occupation_Category_label'] = 'OTHER'\n"
+    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'ARTS', 'Occupation_Category_label'] = 'OTHER'\n",
+    "cleanedgenderwage.loc[cleanedgenderwage['Occupation_Category_label'] == 'LEGAL', 'Occupation_Category_label'] = 'OTHER'\n"
    ]
   },
   {
@@ -1068,7 +1081,7 @@
    "source": [
     "# Ook, well thats distinct. \n",
     "\n",
-    "These distributions of wages indicate that the number of women earning between $500-1000/week is more than men, and that there are more men earning between $1500-2000/week. The scatter plot clearly shows the mens wages consistently plotting higher than the mens.\n",
+    "These distributions of wages indicate that the number of women earning between $500-1000/week is more than men, and that there are more men earning between $1500-2000/week. The scatter plot clearly shows the men's wages consistently plotting higher than the women's.\n",
     "\n",
     "Next, lets take a look at the wages by occuaptional category. I'll mark the men with an x and the women with an o."
    ]
@@ -1409,7 +1422,7 @@
     "nbpresent": {
      "id": "f1e2d017-06a8-4b9c-9199-3498d15a6515"
     },
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1556,9 +1569,9 @@
     "we will be reviewing linear or logisitic regression classifier, then lasso regression classifier, then a random forest classifier\n",
     "\n",
     "The questions I will be looking to answer today is:\n",
-    "     - Can you predict occupational category given wage, gender, gender ratio and share of females for that field? \n",
+    "     - Can you predict the occupational category given wage, gender, gender ratio and share of females for that field, if that field is male dominated or not, and if that feild has a significant wage gap? \n",
     "\n",
-    "If we are able to accurately predict the occuational category using a given wage, gender, or share of females, then perhaps there is more underlying structure influencing wages than skill of employee."
+    "If we are able to accurately predict the occuational category using a given wage, gender, or share of females, then perhaps there is some other underlying structure influencing wages."
    ]
   },
   {
@@ -1712,9 +1725,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "b3f32c4c-d590-423c-8211-9fa879d70a0c"
     },
@@ -1722,7 +1734,21 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "a must be 1-dimensional",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-0831a3c4af51>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Lets do some bootstrapping for our resample\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mX_train_resam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msampled_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0my_train_resam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msampled_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-42-e749672e6189>\u001b[0m in \u001b[0;36msampled_set\u001b[0;34m(data, sample_count)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msampled_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0msampled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msampled\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: a must be 1-dimensional"
+     ]
+    }
+   ],
    "source": [
     "# scale columns here\n",
     "scaler = StandardScaler()\n",
@@ -1733,8 +1759,8 @@
     "           'Gender',\n",
     "           'F_share', \n",
     "           'GenderRatio']\n",
-    "# split up data first, then resample only the training data, maybe try smote again\n",
     "\n",
+    "# split up data first, then resample only the training data, maybe try smote again\n",
     "X = combined_df[columns]\n",
     "\n",
     "X_std = StandardScaler().fit_transform(X)\n",
@@ -1742,16 +1768,15 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_std, y, test_size=.35)\n",
     "\n",
-    "\n",
-    "#X_resam, y_resam = smote.fit_sample(X_train, y_train)\n",
-    "# can't SMOTE because we have more neighbors than samples"
+    "# Lets do some bootstrapping for our resample\n",
+    "X_train_resam = sampled_set(X_train, 500)\n",
+    "y_train_resam = sampled_set(y_train, 500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "metadata": {
-    "collapsed": true,
     "nbpresent": {
      "id": "739d098b-7949-477c-9752-f483fa6131e3"
     },
@@ -1759,11 +1784,20 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# set up x and y variables\n",
-    "#X = combined_df.drop(['Occupation_Category'], axis=1)\n",
-    "#y = combined_df['Occupation_Category']"
+    "len(y_train)"
    ]
   },
   {
