pythonic iterations finally

--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -1160,7 +1160,26 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
+    "#class Testing:\n",
+    "#    pass\n",
+    "#model1 = Testing()\n",
+    "#model1\n",
     "\n",
+    "def check_grid(estimator, params, X, y):\n",
+    "    grid_classifier = GridSearchCV(estimator=estimator, param_grid=params)\n",
+    "    grid_classifier.fit(X, y)\n",
+    "    grid_score = grid_classifier.score(X, y)\n",
+    "    print(grid_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "log_param = {'tol': (.01, .5, 1, 5),\n",
     "             'C': (.01, .5, 1, 5),\n",
     "             'solver': ('newton-cg', 'lbfgs', 'sag')}\n",
@@ -1176,21 +1195,17 @@
     "             'kernel': ('linear', 'poly', 'rbf', 'sigmoid'),\n",
     "             'degree': (2, 3, 4, 5),\n",
     "             'gamma': (1, 2, 3)}\n",
-    "\n",
-    "def check_grid(estimator, params, X, y):\n",
-    "    grid_classifier = GridSearchCV(estimator=estimator, param_grid=params)\n",
-    "    grid_classifier.fit(X, y)\n",
-    "    grid_score = grid_classifier.score(X, y)\n",
-    "    print(grid_score)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
     "# got my estimators\n",
+    "gradient = ensemble.GradientBoostingClassifier()\n",
     "extree = ensemble.ExtraTreesClassifier()\n",
     "dtree = tree.DecisionTreeClassifier()\n",
     "svc = SVC()\n",
@@ -1200,18 +1215,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.46218487394957986\n",
+      "[LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+      "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+      "          verbose=0, warm_start=False), None]\n",
+      "0.773109243697479\n",
+      "[GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
+      "              learning_rate=0.1, loss='deviance', max_depth=3,\n",
+      "              max_features=None, max_leaf_nodes=None,\n",
+      "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "              min_samples_leaf=1, min_samples_split=2,\n",
+      "              min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+      "              presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+      "              warm_start=False), None]\n",
+      "0.8571428571428571\n",
+      "[ExtraTreesClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
+      "           max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+      "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "           min_samples_leaf=1, min_samples_split=2,\n",
+      "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+      "           oob_score=False, random_state=None, verbose=0, warm_start=False), None]\n",
+      "0.4369747899159664\n",
+      "[DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+      "            max_features=None, max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+      "            splitter='best'), None]\n",
+      "0.5882352941176471\n",
+      "[SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  tol=0.001, verbose=False), None]\n",
+      "0.6218487394957983\n",
+      "[RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+      "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+      "            oob_score=False, random_state=None, verbose=0,\n",
+      "            warm_start=False), None]\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate over the kinds of models using grid_check and then return the one that is the best\n",
     "# somehow\n",
     "estimators = [logr,\n",
+    "              gradient,\n",
     "              extree,\n",
     "              dtree,\n",
     "              svc,\n",
     "              forest]\n",
     "params = [log_param,\n",
+    "          gradient_param,\n",
     "          forest_type_param,\n",
     "          dtree_param,\n",
     "          svc_param,\n",
@@ -1220,327 +1285,25 @@
     "\n",
     "# you can do this. somehow. anyway you want\n",
     "\n",
-    "\n",
+    "for estimator, param in list(zip(estimators, params)):\n",
+    "    results = []\n",
+    "    results.append(estimator)\n",
+    "    results.append(check_grid(estimator, param, X_std, y))\n",
+    "    print(results)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression:\n",
-      "0.6439393939393939\n",
-      "Decision Tree:\n",
-      "0.8636363636363636\n",
-      "Random Forest:\n",
-      "0.9545454545454546\n",
-      "Extra Trees:\n",
-      "0.9696969696969697\n",
-      "SVC:\n",
-      "0.9924242424242424\n"
-     ]
-    }
-   ],
-   "source": [
-    "# SMOTE X and Y\n",
-    "print('Logistic Regression:')\n",
-    "check_grid(logr, log_param, X_smote, y_smote)\n",
-    "print('Decision Tree:')\n",
-    "check_grid(dtree, decision_tree_param, X_smote, y_smote)\n",
-    "print('Random Forest:')\n",
-    "check_grid(forest, forest_type_param, X_smote, y_smote)\n",
-    "print('Extra Trees:')\n",
-    "check_grid(extree, forest_type_param, X_smote, y_smote)\n",
-    "print('SVC:')\n",
-    "check_grid(svc, svc_param, X_smote, y_smote)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression:\n",
-      "0.2676056338028169\n",
-      "Decision Tree:\n",
-      "0.8591549295774648\n",
-      "Random Forest:\n",
-      "0.9859154929577465\n",
-      "Extra Trees:\n",
-      "0.971830985915493\n",
-      "SVC:\n",
-      "0.9154929577464789\n"
-     ]
-    }
-   ],
-   "source": [
-    "# NOT SMOTE X and Y\n",
-    "print('Logistic Regression:')\n",
-    "check_grid(logr, log_param, X_train, y_train)\n",
-    "print('Decision Tree:')\n",
-    "check_grid(dtree, decision_tree_param, X_train, y_train)\n",
-    "print('Random Forest:')\n",
-    "check_grid(forest, forest_type_param, X_train, y_train)\n",
-    "print('Extra Trees:')\n",
-    "check_grid(extree, forest_type_param, X_train, y_train)\n",
-    "print('SVC:')\n",
-    "check_grid(svc, svc_param, X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression:\n",
-      "0.4166666666666667\n",
-      "Decision Tree:\n",
-      "0.5208333333333334\n",
-      "Random Forest:\n",
-      "0.8541666666666666\n",
-      "Extra Trees:\n",
-      "1.0\n",
-      "SVC:\n",
-      "0.5833333333333334\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test X and Y\n",
-    "print('Logistic Regression:')\n",
-    "check_grid(logr, log_param, X_test, y_test)\n",
-    "print('Decision Tree:')\n",
-    "check_grid(dtree, decision_tree_param, X_test, y_test)\n",
-    "print('Random Forest:')\n",
-    "check_grid(forest, forest_type_param, X_test, y_test)\n",
-    "print('Extra Trees:')\n",
-    "check_grid(extree, forest_type_param, X_test, y_test)\n",
-    "print('SVC:')\n",
-    "check_grid(svc, svc_param, X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cv': None,\n",
-       " 'error_score': 'raise',\n",
-       " 'estimator': RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "             max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "             min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "             min_samples_leaf=1, min_samples_split=2,\n",
-       "             min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "             oob_score=False, random_state=None, verbose=0,\n",
-       "             warm_start=False),\n",
-       " 'estimator__bootstrap': True,\n",
-       " 'estimator__class_weight': None,\n",
-       " 'estimator__criterion': 'gini',\n",
-       " 'estimator__max_depth': None,\n",
-       " 'estimator__max_features': 'auto',\n",
-       " 'estimator__max_leaf_nodes': None,\n",
-       " 'estimator__min_impurity_decrease': 0.0,\n",
-       " 'estimator__min_impurity_split': None,\n",
-       " 'estimator__min_samples_leaf': 1,\n",
-       " 'estimator__min_samples_split': 2,\n",
-       " 'estimator__min_weight_fraction_leaf': 0.0,\n",
-       " 'estimator__n_estimators': 10,\n",
-       " 'estimator__n_jobs': 1,\n",
-       " 'estimator__oob_score': False,\n",
-       " 'estimator__random_state': None,\n",
-       " 'estimator__verbose': 0,\n",
-       " 'estimator__warm_start': False,\n",
-       " 'fit_params': None,\n",
-       " 'iid': True,\n",
-       " 'n_jobs': 1,\n",
-       " 'param_grid': {'criterion': ('gini', 'entropy'),\n",
-       "  'max_depth': (2, 3, 5),\n",
-       "  'n_estimators': (100, 200, 300)},\n",
-       " 'pre_dispatch': '2*n_jobs',\n",
-       " 'refit': True,\n",
-       " 'return_train_score': 'warn',\n",
-       " 'scoring': None,\n",
-       " 'verbose': 0}"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid_cv = GridSearchCV(estimator=forest, param_grid=forest_type_param)\n",
-    "grid_cv.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {
-    "nbpresent": {
-     "id": "a4465df8-57b8-4854-b3d5-9663d256aea0"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cv': None,\n",
-       " 'error_score': 'raise',\n",
-       " 'estimator': SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "   decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
-       "   max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "   tol=0.001, verbose=False),\n",
-       " 'estimator__C': 1.0,\n",
-       " 'estimator__cache_size': 200,\n",
-       " 'estimator__class_weight': None,\n",
-       " 'estimator__coef0': 0.0,\n",
-       " 'estimator__decision_function_shape': 'ovr',\n",
-       " 'estimator__degree': 3,\n",
-       " 'estimator__gamma': 'auto',\n",
-       " 'estimator__kernel': 'rbf',\n",
-       " 'estimator__max_iter': -1,\n",
-       " 'estimator__probability': False,\n",
-       " 'estimator__random_state': None,\n",
-       " 'estimator__shrinking': True,\n",
-       " 'estimator__tol': 0.001,\n",
-       " 'estimator__verbose': False,\n",
-       " 'fit_params': None,\n",
-       " 'iid': True,\n",
-       " 'n_jobs': 1,\n",
-       " 'param_grid': {'C': (0.1, 0.5, 1, 5),\n",
-       "  'degree': (2, 3, 4, 5),\n",
-       "  'gamma': (1, 2, 3),\n",
-       "  'kernel': ('linear', 'poly', 'rbf', 'sigmoid')},\n",
-       " 'pre_dispatch': '2*n_jobs',\n",
-       " 'refit': True,\n",
-       " 'return_train_score': 'warn',\n",
-       " 'scoring': None,\n",
-       " 'verbose': 0}"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get params here for best model\n",
-    "grid_cv = GridSearchCV(estimator=svc, param_grid=svc_param)\n",
-    "grid_cv.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cv': None,\n",
-       " 'error_score': 'raise',\n",
-       " 'estimator': ExtraTreesClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "            oob_score=False, random_state=None, verbose=0, warm_start=False),\n",
-       " 'estimator__bootstrap': False,\n",
-       " 'estimator__class_weight': None,\n",
-       " 'estimator__criterion': 'gini',\n",
-       " 'estimator__max_depth': None,\n",
-       " 'estimator__max_features': 'auto',\n",
-       " 'estimator__max_leaf_nodes': None,\n",
-       " 'estimator__min_impurity_decrease': 0.0,\n",
-       " 'estimator__min_impurity_split': None,\n",
-       " 'estimator__min_samples_leaf': 1,\n",
-       " 'estimator__min_samples_split': 2,\n",
-       " 'estimator__min_weight_fraction_leaf': 0.0,\n",
-       " 'estimator__n_estimators': 10,\n",
-       " 'estimator__n_jobs': 1,\n",
-       " 'estimator__oob_score': False,\n",
-       " 'estimator__random_state': None,\n",
-       " 'estimator__verbose': 0,\n",
-       " 'estimator__warm_start': False,\n",
-       " 'fit_params': None,\n",
-       " 'iid': True,\n",
-       " 'n_jobs': 1,\n",
-       " 'param_grid': {'criterion': ('gini', 'entropy'),\n",
-       "  'max_depth': (2, 3, 5),\n",
-       "  'n_estimators': (100, 200, 300)},\n",
-       " 'pre_dispatch': '2*n_jobs',\n",
-       " 'refit': True,\n",
-       " 'return_train_score': 'warn',\n",
-       " 'scoring': None,\n",
-       " 'verbose': 0}"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid_cv = GridSearchCV(estimator=extree, param_grid=forest_type_param)\n",
-    "grid_cv.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.21875    0.29032258 0.35483871 0.32      ]\n",
-      "0.30178427419354836\n"
-     ]
-    }
-   ],
-   "source": [
-    "random_forest = ensemble.RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-    "             max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-    "             min_impurity_decrease=0.0, min_impurity_split=None,\n",
-    "             min_samples_leaf=1, min_samples_split=2,\n",
-    "             min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-    "             oob_score=False, random_state=None, verbose=0,\n",
-    "             warm_start=False)\n",
-    "print(cross_val_score(random_forest, X_std, y, cv=4))\n",
-    "print(np.mean(cross_val_score(random_forest, X_std, y, cv=4)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.125      0.25806452 0.19354839 0.44      ]\n",
-      "0.2654032258064516\n"
+      "[0.34375    0.25806452 0.35483871 0.28      ]\n",
+      "0.2732157258064516\n"
      ]
     }
    ],
@@ -1558,52 +1321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.3125     0.12903226 0.19354839 0.32      ]\n",
-      "0.23877016129032258\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Put model validation here\n",
-    "svc = SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-    "   decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
-    "   max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-    "   tol=0.001, verbose=False)\n",
-    "\n",
-    "#    cross_val_score uses stratified K fold when y is multiclass and cv is an int\n",
-    "print(cross_val_score(svc, X_std, y, cv=4))\n",
-    "print(np.mean(cross_val_score(svc, X_std, y, cv=4)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0, 2, 0, 2, 0, 0, 0, 1, 0],\n",
+       "array([[3, 0, 0, 2, 0, 1, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 2, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0, 1, 2, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0],\n",
-       "       [2, 1, 0, 2, 0, 1, 0, 0, 0, 1, 0],\n",
-       "       [1, 1, 0, 0, 0, 0, 3, 0, 0, 0, 0],\n",
-       "       [1, 2, 1, 0, 0, 2, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 0],\n",
-       "       [3, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1, 0, 2, 0, 0, 0]])"
+       "       [0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0],\n",
+       "       [0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0],\n",
+       "       [3, 0, 0, 2, 0, 1, 0, 0, 0, 1, 0],\n",
+       "       [0, 1, 0, 0, 0, 0, 3, 0, 0, 1, 0],\n",
+       "       [4, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0],\n",
+       "       [1, 2, 0, 0, 0, 0, 0, 1, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0]])"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,8 +1349,40 @@
     "# look at confusion matrix here\n",
     "from sklearn.metrics import confusion_matrix\n",
     "# confusion_matrix(y_true, y_pred)\n",
-    "y_pred = random_forest.fit(X_train, y_train).predict(X_test)\n",
+    "y_pred = extree.predict(X_test)\n",
     "confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "FP = confusion_matrix.sum(axis=0) - np.diag(confusion_matrix)  \n",
+    "FN = confusion_matrix.sum(axis=1) - np.diag(confusion_matrix)\n",
+    "TP = np.diag(confusion_matrix)\n",
+    "TN = confusion_matrix.values.sum() - (FP + FN + TP)\n",
+    "\n",
+    "# Sensitivity, hit rate, recall, or true positive rate\n",
+    "TPR = TP/(TP+FN)\n",
+    "# Specificity or true negative rate\n",
+    "TNR = TN/(TN+FP) \n",
+    "# Precision or positive predictive value\n",
+    "PPV = TP/(TP+FP)\n",
+    "# Negative predictive value\n",
+    "NPV = TN/(TN+FN)\n",
+    "# Fall out or false positive rate\n",
+    "FPR = FP/(FP+TN)\n",
+    "# False negative rate\n",
+    "FNR = FN/(TP+FN)\n",
+    "# False discovery rate\n",
+    "FDR = FP/(TP+FP)\n",
+    "\n",
+    "# Overall accuracy\n",
+    "ACC = (TP+TN)/(TP+FP+FN+TN)"
    ]
   },
   {
